--- a/6/lib/sparky-aptus-appcenter/net-filetransfer.html
+++ b/6/lib/sparky-aptus-appcenter/net-filetransfer.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 23, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> File Transfer | APTus AppCenter</title>
@@ -56,6 +56,8 @@ Last update: July 23, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://netfil_lftp" class="button1"><img src="images/download.svg" class="appicon"><br />LFTP</a>
 		</td>
+		<td><a href="aptus://netfil_motrix" class="button1"><img src="images/download.svg" class="appicon"><br />Motrix</a>
+		</td>
 		<td><a href="aptus://netfil_persepolis" class="button1"><img src="images/persepolis.svg" class="appicon"><br />Persepolis</a>
 		</td>
 		<td><a href="aptus://netfil_uftp" class="button1"><img src="images/download.svg" class="appicon"><br />UFTP</a>
@@ -64,6 +66,8 @@ Last update: July 23, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netfil_uget-integrator" class="button1"><img src="images/uget.svg" class="appicon"><br />uGet Integrator</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netfil_wget" class="button1"><img src="images/download.svg" class="appicon"><br />Wget</a>
 		</td>
 	</tr>
