--- a/6/lib/sparky-aptus-appcenter/office-document.html
+++ b/6/lib/sparky-aptus-appcenter/office-document.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Office -> Document Readers | APTus AppCenter</title>
@@ -52,10 +52,12 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offdoc_evince" class="button1"><img src="images/pdf.svg" class="appicon"><br />Evince</a>
 		</td>
-		<td><a href="aptus://offdoc_master-pdf-editor" class="button1"><img src="images/masterpdfeditor.svg" class="appicon"><br />Master PDF Editor</a>
+		<td><a href="aptus://offdoc_fbless" class="button1"><img src="images/terminal.svg" class="appicon"><br />Fbless</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offdoc_master-pdf-editor" class="button1"><img src="images/masterpdfeditor.svg" class="appicon"><br />Master PDF Editor</a>
+		</td>
 		<td><a href="aptus://offdoc_mcomix" class="button1"><img src="images/comix.svg" class="appicon"><br />MComix</a>
 		</td>
 		<td><a href="aptus://offdoc_mupdf" class="button1"><img src="images/pdf.svg" class="appicon"><br />MuPDF</a>
