--- a/6/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/6/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 2, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -74,14 +74,16 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://videdi_mystiq" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Mystiq</a>
 		</td>
+		<td><a href="aptus://videdi_nageru" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Nageru</a>
+		</td>
 		<td><a href="aptus://videdi_ogmrip" class="button1"><img src="images/devede.svg" class="appicon"><br />OGMRip</a>
 		</td>
 		<td><a href="aptus://videdi_openshot" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot</a>
 		</td>
-		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
+		</td>
 		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
 		</td>
 		<td><a href="aptus://videdi_shorten" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shorten</a>
@@ -92,10 +94,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://videdi_slowmovideo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Slowmovideo</a>
 		</td>
-		<td><a href="aptus://videdi_sparky-tube" class="button1"><img src="images0/sparky-tube.svg" class="appicon"><br />Sparky Tube</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_sparky-tube" class="button1"><img src="images0/sparky-tube.svg" class="appicon"><br />Sparky Tube</a>
+		</td>
 		<td><a href="aptus://videdi_stopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Stopmotion</a>
 		</td>
 		<td><a href="aptus://videdi_vcdimager" class="button1"><img src="images/devede.svg" class="appicon"><br />VCDImager</a>
@@ -106,10 +108,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://videdi_vqmt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />VQMT</a>
 		</td>
-		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
+		</td>
 		<td><a href="aptus://videdi_xjadeo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Xjadeo</a>
 		</td>
 		<td><a href="aptus://videdi_youtube-dl" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube-DL</a>
