--- a/6/lib/sparky-aptus-appcenter/net-rss.html
+++ b/6/lib/sparky-aptus-appcenter/net-rss.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 27, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Feeds | APTus AppCenter</title>
@@ -54,6 +54,8 @@ Last update: August 27, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netrss_raven-reader" class="button1"><img src="images/rss.svg" class="appicon"><br />Raven Reader</a>
+		</td>
 		<td><a href="aptus://netrss_rssguard" class="button1"><img src="images/rss.svg" class="appicon"><br />RSS Guard</a>
 		</td>
 		<td><a href="aptus://netrss_rsstail" class="button1"><img src="images/rss.svg" class="appicon"><br />RSSTail</a>
