--- a/6/lib/sparky-aptus-appcenter/net-vpn.html
+++ b/6/lib/sparky-aptus-appcenter/net-vpn.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> VPN | APTus AppCenter</title>
@@ -60,14 +60,16 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netprv_protonvpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />ProtonVPN</a>
 		</td>
+		<td><a href="aptus://netprv_quicktun" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Quicktun</a>
+		</td>
 		<td><a href="aptus://netprv_riseup-vpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />RiseupVPN</a>
 		</td>
 		<td><a href="aptus://netprv_softether-vpnclient" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />SoftEther VPN Client</a>
 		</td>
-		<td><a href="aptus://netprv_vpnc" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />VPNC</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netprv_vpnc" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />VPNC</a>
+		</td>
 		<td><a href="aptus://netprv_wireguard" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />WireGuard</a>
 		</td>
 	</tr>
