--- a/6/lib/sparky-aptus-appcenter/office-calculator.html
+++ b/6/lib/sparky-aptus-appcenter/office-calculator.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Office -> Calculators | APTus AppCenter</title>
@@ -62,6 +62,8 @@ Last update: June 13, 2021 by pavroo
 		<td><a href="aptus://offcal_qalculate-gtk" class="button1"><img src="images/calc.svg" class="appicon"><br />Qalculate GTK</a>
 		</td>
 		<td><a href="aptus://offcal_qcalculator" class="button1"><img src="images/calc.svg" class="appicon"><br />QCalculator</a>
+		</td>
+		<td><a href="aptus://offcal_quickcal" class="button1"><img src="images/calc.svg" class="appicon"><br />QuickCal</a>
 		</td>
 		<td><a href="aptus://offcal_wcalc" class="button1"><img src="images/calc.svg" class="appicon"><br />Wcalc</a>
 		</td>
