--- a/7/lib/sparky-aptus-appcenter/accessories.html
+++ b/7/lib/sparky-aptus-appcenter/accessories.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 28, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories | APTus AppCenter</title>
@@ -58,16 +58,21 @@ Last update: October 28, 2021 by pavroo
 		</td>
 		<td><a href="accessories-terminals.html" class="button"><span><script>dict.print('main', 'term');</script></span></a>
 		</td>
-		<td><a href="accessories-translators.html" class="button"><span><script>dict.print('main', 'translators');</script></span></a>
+		<td><a href="accessories-themes.html" class="button"><span><script>dict.print('main', 'themes');</script></span></a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="accessories-translators.html" class="button"><span><script>dict.print('main', 'translators');</script></span></a>
+		</td>
 		<td><a href="accessories-usb.html" class="button"><span><script>dict.print('main', 'usb');</script></span></a>
 		</td>
 		<td><a href="accessories-weather.html" class="button"><span><script>dict.print('main', 'weather');</script></span></a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="accessories-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
 		</td>
+		
 	</tr>
 </tbody>
 </div>
