--- a/7/lib/sparky-aptus-appcenter/education.html
+++ b/7/lib/sparky-aptus-appcenter/education.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Education/Science A-G | APTus AppCenter</title>
@@ -92,12 +92,14 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://educat1_ferret" class="button1"><img src="images/science.svg" class="appicon"><br />Ferret</a>
 		</td>
-		<td><a href="aptus://educat1_fraqtive" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Fraqtive</a>
+		<td><a href="aptus://educat1_fracplanet" class="button1"><img src="images/atom.svg" class="appicon"><br />FracPlanet</a>
 		</td>
-		<td><a href="aptus://educat1_g3data" class="button1"><img src="images/glade.svg" class="appicon"><br />g3data</a>
+		<td><a href="aptus://educat1_fraqtive" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Fraqtive</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://educat1_g3data" class="button1"><img src="images/glade.svg" class="appicon"><br />g3data</a>
+		</td>
 		<td><a href="aptus://educat1_gabedit" class="button1"><img src="images/science.svg" class="appicon"><br />Gabedit</a>
 		</td>
 		<td><a href="aptus://educat1_garlic" class="button1"><img src="images/atom.svg" class="appicon"><br />Garlic</a>
@@ -108,10 +110,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://educat1_gcompris-qt" class="button1"><img src="images/gcompris.svg" class="appicon"><br />GCompris</a>
 		</td>
-		<td><a href="aptus://educat1_geogebra" class="button1"><img src="images/glade.svg" class="appicon"><br />GeoGebra</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://educat1_geogebra" class="button1"><img src="images/glade.svg" class="appicon"><br />GeoGebra</a>
+		</td>
 		<td><a href="aptus://educat1_gfsview" class="button1"><img src="images/science.svg" class="appicon"><br />GfsView</a>
 		</td>
 		<td><a href="aptus://educat1_glogic" class="button1"><img src="images/edu.svg" class="appicon"><br />gLogic</a>
