--- a/7/lib/sparky-aptus-appcenter/education3.html
+++ b/7/lib/sparky-aptus-appcenter/education3.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Education/Science O-Z | APTus AppCenter</title>
@@ -115,6 +115,8 @@ Last update: June 13, 2021 by pavroo
 		<td><a href="aptus://educat3_wordnet" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />WordNet</a>
 		</td>
 		<td><a href="aptus://educat3_wxmaxima" class="button1"><img src="images/science.svg" class="appicon"><br />wxMaxima</a>
+		</td>
+		<td><a href="aptus://educat3_xplanet" class="button1"><img src="images/atom.svg" class="appicon"><br />Xplanet</a>
 		</td>
 	</tr>
 </tbody>
