--- a/7/lib/sparky-aptus-appcenter/office-suite.html
+++ b/7/lib/sparky-aptus-appcenter/office-suite.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: November 29, 2021 by pavroo
 -->
 	<head>
 		<title>Office -> Suites | APTus AppCenter</title>
@@ -42,7 +42,7 @@ Last update: June 13, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://offsui_calligra" class="button1"><img src="images/calligragemini.svg" class="appicon"><br />Calligra</a>
 		</td>
-		<td><a href="aptus://offsui_softmaker-freeoffice-2018" class="button1"><img src="images/word.svg" class="appicon"><br />FreeOffice</a>
+		<td><a href="aptus://offsui_softmaker-freeoffice-2021" class="button1"><img src="images/word.svg" class="appicon"><br />FreeOffice 2021</a>
 		</td>
 		<td><a href="aptus://offsui_libreoffice" class="button1"><img src="images/libreoffice.svg" class="appicon"><br />LibreOffice</a>
 		</td>
