--- a/6/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/6/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 28, 2021 by pavroo
+Last update: December 5, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -56,19 +56,20 @@ Last update: October 28, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://accoth_fbpanel" class="button1"><img src="images1/panel.svg" class="appicon"><br />Fbpanel</a>
 		</td>
+		<td><a href="aptus://accoth_font-manager" class="button1"><img src="images/fonts.svg" class="appicon"><br />Font Manager</a>
+		</td>
 		<td><a href="aptus://accoth_gammy" class="button1"><img src="images/backlight.svg" class="appicon"><br />Gammy</a>
 		</td>
 		<td><a href="aptus://accoth_gexec" class="button1"><img src="images/default-icon.svg" class="appicon"><br />gExec</a>
 		</td>
 		<td><a href="aptus://accoth_gjiten" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Gjiten</a>
 		</td>
-		
 		<td><a href="aptus://accoth_i3lock" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock</a>
-		</td>
-		<td><a href="aptus://accoth_i3lock-fancy" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock fancy</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_i3lock-fancy" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock fancy</a>
+		</td>
 		<td><a href="aptus://accoth_jgmenu" class="button1"><img src="images1/panel.svg" class="appicon"><br />Jgmenu</a>
 		</td>
 		<td><a href="aptus://accoth_kdocker" class="button1"><img src="images1/panel.svg" class="appicon"><br />KDocker</a>
@@ -77,12 +78,14 @@ Last update: October 28, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_kupfer" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Kupfer</a>
 		</td>
+		<td><a href="aptus://accoth_latte-dock" class="button1"><img src="images/dock.svg" class="appicon"><br />Latte Dock</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_light-locker" class="button1"><img src="images/screensaver.svg" class="appicon"><br />Light Locker</a>
 		</td>
 		<td><a href="aptus://accoth_menulibre" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />MenuLibre</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_nitrogen" class="button1"><img src="images/desktop.svg" class="appicon"><br />Nitrogen</a>
 		</td>
 		<td><a href="aptus://accoth_obconf" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf</a>
@@ -91,12 +94,12 @@ Last update: October 28, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Picom</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_plank" class="button1"><img src="images/dock.svg" class="appicon"><br />Plank</a>
 		</td>
 		<td><a href="aptus://accoth_qreator" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qreator</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_qrencode" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qrencode</a>
 		</td>
 		<td><a href="aptus://accoth_qtqr" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />QtQR</a>
@@ -105,12 +108,12 @@ Last update: October 28, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_sparky-about" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky About</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_sparky-backlight" class="button1"><img src="images/backlight.svg" class="appicon"><br />Sparky BackLight</a>
 		</td>
 		<td><a href="aptus://accoth_sparky-dashboard" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />Sparky Dashboard</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_sparky-picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Sparky Picom</a>
 		</td>
 		<td><a href="aptus://accoth_synapse" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Synapse</a>
@@ -119,12 +122,12 @@ Last update: October 28, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_ulauncher" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Ulauncher</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_wbar" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar</a>
 		</td>
 		<td><a href="aptus://accoth_wbar-config" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar Config</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_webapp-manager" class="button1"><img src="images/web-browser.svg" class="appicon"><br />WebApp Manager</a>
 		</td>
 		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
