--- a/7/lib/sparky-aptus-appcenter/accessories-monitoring.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-monitoring.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 8, 2021 by pavroo
+Last update: December 5, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Monitoring | APTus AppCenter</title>
@@ -97,6 +97,8 @@ Last update: October 8, 2021 by pavroo
 	</tr>
 	<tr>
 		<td><a href="aptus://accmon_sparky-system" class="button1"><img src="images/computer.svg" class="appicon"><br />Sparky System</a>
+		</td>
+		<td><a href="aptus://accmon_sysmontask" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />SysMonTask</a>
 		</td>
 		<td><a href="aptus://accmon_vnstat" class="button1"><img src="images/terminal.svg" class="appicon"><br />vnStat</a>
 		</td>
