--- a/7/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/7/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 15, 2021 by pavroo
+Last update: December 5, 2021 by pavroo
 -->
 	<head>
 		<title>Graphics -> Editors | APTus AppCenter</title>
@@ -122,8 +122,8 @@ Last update: October 15, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_wings3d" class="button1"><img src="images/freecad.svg" class="appicon"><br />Wings 3D</a>
 		</td>
-		<td><a href="aptus://graedi_xpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />XPaint</a>
-		</td>
+		<!--<td><a href="aptus://graedi_xpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />XPaint</a>
+		</td>-->
 	</tr>
 </tbody>
 </div>
