--- a/7/lib/sparky-aptus-appcenter/system-encrypt.html
+++ b/7/lib/sparky-aptus-appcenter/system-encrypt.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: December 5, 2021 by pavroo
 -->
 	<head>
 		<title>System -> Encrypt | APTus AppCenter</title>
@@ -44,16 +44,18 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://sysenc_cryptsetup" class="button1"><img src="images/terminal.svg" class="appicon"><br />Cryptsetup</a>
 		</td>
+		<td><a href="aptus://sysenc_finalcrypt" class="button1"><img src="images/keyring.svg" class="appicon"><br />FinalCrypt</a>
+		</td>
 		<td><a href="aptus://sysenc_fscrypt" class="button1"><img src="images/terminal.svg" class="appicon"><br />fscrypt</a>
 		</td>
 		<td><a href="aptus://sysenc_gtomb" class="button1"><img src="images/keyring.svg" class="appicon"><br />gtomb</a>
 		</td>
 		<td><a href="aptus://sysenc_mcrypt" class="button1"><img src="images/terminal.svg" class="appicon"><br />mcrypt</a>
 		</td>
-		<td><a href="aptus://sysenc_tomb" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tomb</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://sysenc_tomb" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tomb</a>
+		</td>
 		<td><a href="aptus://sysenc_veracrypt" class="button1"><img src="images/keyring.svg" class="appicon"><br />VeraCrypt</a>
 		</td>
 		<td><a href="aptus://sysenc_zulucrypt-cli" class="button1"><img src="images/terminal.svg" class="appicon"><br />Zulucrypt CLI</a>
