--- a/7/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/7/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 11, 2021 by pavroo
+Last update: December 27, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -64,14 +64,14 @@ Last update: December 11, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_firefox-esr" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox ESR</a>
 		</td>
-		<td><a href="aptus://netweb_firefox-esr-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox ESR Mozilla Build</a>
+		<!--<td><a href="aptus://netweb_firefox-esr-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox ESR Mozilla Build</a>
+		</td>-->
+		<td><a href="aptus://netweb_firefox-latest" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netweb_firefox-latest" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest</a>
-		</td>
-		<td><a href="aptus://netweb_firefox-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest Mozilla Build</a>
-		</td>
+		<!--<td><a href="aptus://netweb_firefox-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest Mozilla Build</a>
+		</td>-->
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
 		</td>
 		<td><a href="aptus://netweb_hv3" class="button1"><img src="images/web-browser.svg" class="appicon"><br />hv3</a>
@@ -80,12 +80,12 @@ Last update: December 11, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_iron" class="button1"><img src="images0/iron.png" class="appicon"><br />Iron</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
 		</td>
 		<td><a href="aptus://netweb_librewolf" class="button1"><img src="images0/librewolf.png" class="appicon"><br />Librewolf</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
 		</td>
 		<td><a href="aptus://netweb_luakit" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Luakit</a>
@@ -94,12 +94,12 @@ Last update: December 11, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_microsoft-edge-stable" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Microsoft Edge</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
 		</td>
 		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
 		</td>
 		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
@@ -108,12 +108,12 @@ Last update: December 11, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_opera-stable" class="button1"><img src="images/opera.svg" class="appicon"><br />Opera</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_otter-browser" class="button1"><img src="images0/otter.png" class="appicon"><br />Otter</a>
 		</td>
 		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
 		</td>
 		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
@@ -122,19 +122,19 @@ Last update: December 11, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_ungoogled-chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Ungoogled Chromium</a>
 		</td>
 		<td><a href="aptus://netweb_viper-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Viper Browser</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
 		</td>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
 		</td>
 		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
 		</td>
-		<td><a href="aptus://netweb_waterfox-g3-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Current</a>
+		<td><a href="aptus://netweb_waterfox-g4-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Current</a>
 		</td>
 	</tr>
 </tbody>
