--- a/7/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 2, 2021 by pavroo
+Last update: January 9, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -56,6 +56,8 @@ Last update: November 2, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://audpla_cmus" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Cmus</a>
 		</td>
+		<td><a href="aptus://audpla_cozy" class="button1"><img src="images/audio-headphones.svg" class="appicon"><br />Cozy</a>
+		</td>
 		<td><a href="aptus://audpla_daisy-player" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Daisy Player</a>
 		</td>
 		<td><a href="aptus://audpla_deadbeef" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />DeaDBeeF</a>
@@ -64,10 +66,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_dradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Dradio</a>
 		</td>
-		<td><a href="aptus://audpla_elisa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Elisa</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_elisa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Elisa</a>
+		</td>
 		<td><a href="aptus://audpla_exaile" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Exaile</a>
 		</td>
 		<td><a href="aptus://audpla_foobnix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foobnix</a>
@@ -78,10 +80,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_gogglesmm" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goggles Music Manager</a>
 		</td>
-		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
+		</td>
 		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
 		</td>
 		<td><a href="aptus://audpla_gxmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />GXMMS2</a>
@@ -92,10 +94,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_lxmusic" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />LXMusic</a>
 		</td>
-		<td><a href="aptus://audpla_mellowplayer" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />MellowPlayer</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_mellowplayer" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />MellowPlayer</a>
+		</td>
 		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
 		</td>
 		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
@@ -106,10 +108,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_pmrp" class="button1"><img src="images/radio.svg" class="appicon"><br />PMRP</a>
 		</td>
-		<td><a href="aptus://audpla_pogo" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pogo</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_pogo" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pogo</a>
+		</td>
 		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
 		</td>
 		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
@@ -120,10 +122,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_radiostation" class="button1"><img src="images/radio.svg" class="appicon"><br />RadioStation</a>
 		</td>
-		<td><a href="aptus://audpla_rhythmbox" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Rhythmbox</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_rhythmbox" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Rhythmbox</a>
+		</td>
 		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
 		</td>
 		<td><a href="aptus://audpla_shortwave" class="button1"><img src="images/radio.svg" class="appicon"><br />ShortWave</a>
@@ -134,10 +136,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_sparky-play" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Play MP3</a>
 		</td>
-		<td><a href="aptus://audpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
+		</td>
 		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
 		</td>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
