--- a/7/lib/sparky-aptus-appcenter/media-audiotools.html
+++ b/7/lib/sparky-aptus-appcenter/media-audiotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 13, 2021 by pavroo
+Last update: January 9, 2022 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Tools | APTus AppCenter</title>
@@ -58,16 +58,18 @@ Last update: September 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_chirp" class="button1"><img src="images/radio.svg" class="appicon"><br />Chirp</a>
 		</td>
+		<td><a href="aptus://audtoo_ciano" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Ciano</a>
+		</td>
 		<td><a href="aptus://audtoo_dgedit" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />DGEdit</a>
 		</td>
 		<td><a href="aptus://audtoo_din" class="button1"><img src="images/noise.svg" class="appicon"><br />DIN Is Noise</a>
 		</td>
 		<td><a href="aptus://audtoo_drumkv1" class="button1"><img src="images/noise.svg" class="appicon"><br />drumkv1</a>
 		</td>
-		<td><a href="aptus://audtoo_foo-yc20" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foo YC20</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_foo-yc20" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foo YC20</a>
+		</td>
 		<td><a href="aptus://audtoo_freedv" class="button1"><img src="images/radio.svg" class="appicon"><br />FreeDV</a>
 		</td>
 		<td><a href="aptus://audtoo_gjacktransport" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />gjacktransport</a>
@@ -78,10 +80,10 @@ Last update: September 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_guitarix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Guitarix</a>
 		</td>
-		<td><a href="aptus://audtoo_jaaa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />JACK and ALSA Audio Analyser</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_jaaa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />JACK and ALSA Audio Analyser</a>
+		</td>
 		<td><a href="aptus://audtoo_jack-keyboard" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jack Keyboard</a>
 		</td>
 		<td><a href="aptus://audtoo_kluppe" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kluppe</a>
@@ -92,10 +94,10 @@ Last update: September 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_lmms" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />LMMS</a>
 		</td>
-		<td><a href="aptus://audtoo_milkytracker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Milky Tracker</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_milkytracker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Milky Tracker</a>
+		</td>
 		<td><a href="aptus://audtoo_mixxx" class="button1"><img src="images/mixxx.svg" class="appicon"><br />Mixxx</a>
 		</td>
 		<td><a href="aptus://audtoo_muse" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MusE</a>
@@ -106,10 +108,10 @@ Last update: September 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_puredata" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pure Data</a>
 		</td>
-		<td><a href="aptus://audtoo_qjackctl" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QjackCtl</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_qjackctl" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QjackCtl</a>
+		</td>
 		<td><a href="aptus://audtoo_qtractor" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qtractor</a>
 		</td>
 		<td><a href="aptus://audtoo_qsynth" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QSynth</a>
@@ -120,10 +122,10 @@ Last update: September 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_setbfree" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />setBfree</a>
 		</td>
-		<td><a href="aptus://audtoo_simplest-studio" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Simplest Studio</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_simplest-studio" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Simplest Studio</a>
+		</td>
 		<td><a href="aptus://audtoo_sonobus" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SonoBus</a>
 		</td>
 		<td><a href="aptus://audtoo_sooperlooper" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SooperLooper</a>
@@ -134,10 +136,10 @@ Last update: September 13, 2021 by pavroo
 		</td>	
 		<td><a href="aptus://audtoo_sound-juicer" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />Sound-Juicer</a>
 		</td>
-		<td><a href="aptus://audtoo_soundkonverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />soundKonverter</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_soundkonverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />soundKonverter</a>
+		</td>
 		<td><a href="aptus://audtoo_sweep" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Sweep</a>
 		</td>
 		<td><a href="aptus://audtoo_tangerine" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Tangerine</a>
@@ -148,10 +150,10 @@ Last update: September 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_vmpk" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vmpk</a>
 		</td>
-		<td><a href="aptus://audtoo_wavbreaker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />WavBreaker</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_wavbreaker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />WavBreaker</a>
+		</td>
 		<td><a href="aptus://audtoo_xcutmp3" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />xcutmp3</a>
 		</td>
 		<td><a href="aptus://audtoo_yoshimi" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Yoshimi</a>
