--- a/7/lib/sparky-aptus-appcenter/net-communication.html
+++ b/7/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 8, 2021 by pavroo
+Last update: January 9, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -110,6 +110,8 @@ Last update: October 8, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
+		</td>
 		<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
 		</td>
 		<td><a href="aptus://netcom_smuxi" class="button1"><img src="images/im.svg" class="appicon"><br />Smuxi</a>
@@ -120,10 +122,10 @@ Last update: October 8, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netcom_thelounge" class="button1"><img src="images/irc.svg" class="appicon"><br />The Lounge</a>
 		</td>
-		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
+		</td>
 		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
 		</td>
 		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
