--- a/7/lib/sparky-aptus-appcenter/net-vpn.html
+++ b/7/lib/sparky-aptus-appcenter/net-vpn.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 29, 2021 by pavroo
+Last update: January 25, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> VPN | APTus AppCenter</title>
@@ -44,16 +44,18 @@ Last update: November 29, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netprv_freelan" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Freelan</a>
 		</td>
+		<td><a href="aptus://netprv_mullvad-vpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />Mullvad VPN</a>
+		</td>
 		<td><a href="aptus://netprv_network-manager-openvpn-gnome" class="button1"><img src="images/network.svg" class="appicon"><br />Network Manager OpenVPN GNOME</a>
 		</td>
 		<td><a href="aptus://netprv_network-manager-vpnc-gnome" class="button1"><img src="images/network.svg" class="appicon"><br />Network Manager VPNC GNOME</a>
 		</td>
 		<td><a href="aptus://netprv_openconnect" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />OpenConnect</a>
 		</td>
-		<td><a href="aptus://netprv_openfortivpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Openforti VPN</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netprv_openfortivpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Openforti VPN</a>
+		</td>
 		<td><a href="aptus://netprv_openvpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />OpenVPN</a>
 		</td>
 		<td><a href="aptus://netprv_protonvpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />ProtonVPN</a>
@@ -64,10 +66,10 @@ Last update: November 29, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netprv_softether-vpnclient" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />SoftEther VPN Client</a>
 		</td>
-		<td><a href="aptus://netprv_vpnc" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />VPNC</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netprv_vpnc" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />VPNC</a>
+		</td>
 		<td><a href="aptus://netprv_wireguard" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />WireGuard</a>
 		</td>
 	</tr>
