--- a/6/lib/sparky-aptus-appcenter/net-p2p.html
+++ b/6/lib/sparky-aptus-appcenter/net-p2p.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 23, 2021 by pavroo
+Last update: January 25, 2022 by pavroo
 -->
 	<head>
 		<title>Network -> Peer2Peer | APTus AppCenter</title>
@@ -54,6 +54,8 @@ Last update: July 23, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netp2p_nicotine" class="button1"><img src="images/bittorrent.svg" class="appicon"><br />Nicotine+</a>
+		</td>
 		<td><a href="aptus://netp2p_qbittorrent" class="button1"><img src="images/qbittorrent.svg" class="appicon"><br />qBittorrent</a>
 		</td>
 		<td><a href="aptus://netp2p_rtorrent" class="button1"><img src="images/bittorrent.svg" class="appicon"><br />rtorrent</a>
