--- a/7/lib/sparky-aptus-appcenter/office-others.html
+++ b/7/lib/sparky-aptus-appcenter/office-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 29, 2021 by pavroo
+Last update: February 4, 2022 by pavroo
 -->
 	<head>
 		<title>Office -> Others | APTus AppCenter</title>
@@ -48,12 +48,14 @@ Last update: November 29, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offoth_planner" class="button1"><img src="images/textx.svg" class="appicon"><br />Planner</a>
 		</td>
-		<td><a href="aptus://offoth_scribus" class="button1"><img src="images/scribus.svg" class="appicon"><br />Scribus</a>
+		<td><a href="aptus://offoth_rainlendar2-lite" class="button1"><img src="images/calendar.svg" class="appicon"><br />Rainlendar2 Lite</a>
 		</td>
-		<td><a href="aptus://offoth_simple-scan" class="button1"><img src="images/scanner.svg" class="appicon"><br />Simple Scan</a>
+		<td><a href="aptus://offoth_scribus" class="button1"><img src="images/scribus.svg" class="appicon"><br />Scribus</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offoth_simple-scan" class="button1"><img src="images/scanner.svg" class="appicon"><br />Simple Scan</a>
+		</td>
 		<td><a href="aptus://offoth_system-config-printer" class="button1"><img src="images/printer.svg" class="appicon"><br />System Config Printer</a>
 		</td>
 		<td><a href="aptus://offoth_tagspaces" class="button1"><img src="images/easytag.svg" class="appicon"><br />TagSpaces</a>
